--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+
+      - name: Install Python
+        uses: actions/setup-python@v2
+      - name: Lint
+        uses: pre-commit/action@v2.0.3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -19,10 +25,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push Ubuntu Qt5
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./ubuntu-qt5.Dockerfile
           push: true
-          tags: ghcr.io/derpicated/articated-ci-container:latest
+          tags: ghcr.io/derpicated/articated-ci-qt5:latest
+
+      - name: Build and push Fedora Qt6
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./fedora-qt6.Dockerfile
+          push: true
+          tags: ghcr.io/derpicated/articated-ci-qt6:latest
