Add qt6 to qtchooser config for ubuntu 22.04 container
This is needed to find the qt6 buildtools as qtchooser is masking them
and will no longer be maintained:

https://askubuntu.com/questions/1460242/ubuntu-22-04-with-qt6-qmake-could-not-find-a-qt-installation-of

https://salsa.debian.org/qt-kde-team/qt/qtchooser/-/merge_requests/2

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,7 +2,7 @@ name: Publish CI Docker image
 on:
   push:
     paths:
-      - 'Dockerfile'
+      - '*.Dockerfile'
       - '.github/workflows/docker-build.yml'
 jobs:
   push_to_registry:
