Switch CI container back to Fedora
Ubuntu is causing a lot of headaches due to their outdated and
inconsistent Qt packages. Switching to fedora should fix most of those
troubles.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,6 +29,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./ubuntu-qt6.Dockerfile
+          file: ./fedora-qt6.Dockerfile
           push: true
           tags: ghcr.io/derpicated/articated-ci-qt6:latest
